# RP2040

./: .gitignore  .gitmodules  Blink.uf2  micropython.uf2  micropython[1.16].uf2
ArduinoIR/: ArduinoIR.ino  PinDefinitionsAndMore.h
C++/blink/: CMakeLists.txt  blink.c  main.c
C++/blink_PIO/: CMakeLists.txt  hello.pio  main.c
C++/edifier/: CMakeLists.txt  main.cpp
EdifierIR/: edifierIR.ino  main.py
EdifierIR/ir_tx/: nec.py  rp2_rmt.py
PIO/: main.py
blink/: blink.ino
rainbow/: rainbow.ino
